frontend/src/app/components/navbar/navbar.component.css
.navbar-background {
  background-color: #EEEAE4;
}

.adjusted-height {
  height: 5rem;
}

.profile-icon {
  font-size: 1.5rem; /* Adjust the size as needed */
  vertical-align: middle;
  margin-bottom: -2rem; /* Adjust this value as needed */
}

nav {
  font-family: Roboto, sans-serif;
}

.navbar-nav .nav-item .nav-link {
  color: #0b1117;
  transition: color 0.3s ease, background-color 0.3s ease;
}

.navbar-nav .nav-item .nav-link:hover {
  color: #8ED9E9; /* Hover color */
  border-radius: 5px;
}

.navbar-nav .nav-item .active-link {
  font-weight: bold;
  color: #8ED9E9;
  border-bottom: 3px solid #8ED9E9;
}

